# multi_os_cmake_project

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/app1/: CMakeLists.txt
apps/app1/src/: main.cpp
apps/app2/: CMakeLists.txt
apps/app2/resources/: icon_app2.icns
apps/app3/: CMakeLists.txt
apps/app3/resources/: icon_app3.icns
apps/app3/src/: main.cpp
apps/app4/: CMakeLists.txt
apps/app4/resources/: icon_app2.icns  icon_app4.icns
apps/app4/src/: main.cpp
apps/app5/: CMakeLists.txt
apps/app5/resources/: icon_app5.icns
apps/app5/src/: main.cpp
apps/app6/: CMakeLists.txt  license
cmake/: AppImageUtilities.cmake  InstallerHelpers.cmake  MSIXUtilities.cmake  NSISUtilities.cmake  deployUtilities.cmake  installerHelpers.cmake  qtHelpers.cmake
